Add Pubmed dataset.

--- a/generate_attacked_graphs.ipynb
+++ b/generate_attacked_graphs.ipynb
@@ -169,7 +169,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def load_pubmed(data_home):\n",
+    "    \"\"\"Only returns the graph structure ignoring node features\"\"\"\n",
+    "\n",
+    "    path = os.path.expanduser(os.path.join(data_home, \n",
+    "                                           \"ind.pubmed.graph\"))\n",
+    "\n",
+    "    with open(path, \"rb\") as f:\n",
+    "        G_dict = pkl.load(f, encoding=\"latin1\")\n",
+    "    \n",
+    "    G = nx.from_dict_of_lists(G_dict)\n",
+    "    \n",
+    "    adj_matrix = nx.to_numpy_array(G)\n",
+    "    adj_matrix = sparse.csr_matrix(adj_matrix)\n",
+    "\n",
+    "    return G, adj_matrix"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -184,7 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = \"polblogs\"  # one of cora, citeseer, polblogs\n",
+    "dataset = \"polblogs\"  # one of cora, citeseer, polblogs, pubmed\n",
     "load_data = load_cora\n",
     "if dataset==\"cora\":\n",
     "    data_dir = \"~/data/cora\"\n",
@@ -193,7 +209,10 @@
     "    load_data = load_citeseer\n",
     "elif dataset == \"polblogs\":\n",
     "    data_dir = None\n",
-    "    load_data = load_polblogs"
+    "    load_data = load_polblogs\n",
+    "elif dataset == \"pubmed\":\n",
+    "    data_dir = \"~/data/pubmed/\"\n",
+    "    load_data = load_citeseer"
    ]
   },
   {
@@ -380,6 +399,8 @@
     "elif dataset==\"citeseer\":\n",
     "    num_flips = [ -2000, -1000, -500, 500, 1000, 2000, 5000 ]\n",
     "elif dataset==\"polblogs\":\n",
+    "    num_flips = [ -2000, -1000, -500, 500, 1000, 2000, 5000 ]\n",
+    "elif dataset==\"pubmed\":\n",
     "    num_flips = [ -2000, -1000, -500, 500, 1000, 2000, 5000 ]"
    ]
   },
