Update number of edges to add/remove for pubmed dataset.

--- a/generate_attacked_graphs.ipynb
+++ b/generate_attacked_graphs.ipynb
@@ -401,7 +401,7 @@
     "elif dataset==\"polblogs\":\n",
     "    num_flips = [ -2000, -1000, -500, 500, 1000, 2000, 5000 ]\n",
     "elif dataset==\"pubmed\":\n",
-    "    num_flips = [ -2000, -1000, -500, 500, 1000, 2000, 5000 ]"
+    "    num_flips = [ -20000, -10000, -5000, -2000, 2000, 5000, 10000, 20000, 40000 ]"
    ]
   },
   {
